Fix rendering issues on mobile devices.

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,11 +5,14 @@
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+#app {
+  margin-bottom: 120px;
 }
 
 .vertical-align {
